Fix word break on listing titles

--- a/assets/less/components/Listing.less
+++ b/assets/less/components/Listing.less
@@ -176,8 +176,9 @@
 
     .Listing-title {
       color: @black;
-      word-break: break-all;
-      
+      word-break: break-word;
+      word-wrap: break-word;
+
       &.text-admin {
         color: @admin-text;
       }
